# sqlazo

./: .env  .gitignore  CREDENTIAL_STORAGE_README.md  Cargo.toml  README.md  coverage.json  pyproject.toml  test_query.sql  test_version.sql
.github/workflows/: rust-binaries.yml
cli/: README.md  pyproject.toml
cli/src/sqlazo/: __init__.py  cli.py  connection.py  executor.py  formatter.py  parser.py  query.py  schema.py  secure_credentials.py
cli/src/sqlazo/databases/: __init__.py  base.py  mongodb.py  mysql.py  postgresql.py  redis.py  sqlite.py
cli/tests/: test_cli.py  test_connection.py  test_formatter.py  test_handlers.py  test_parser.py  test_schema.py
examples/: basic_query.sql  destructive_query.sql  mongo_find.js  mongo_query.js  mongo_search.js  postgres_query.sql  redis_query.redis  sqlite_query.sql  test.db  test_postgres.sql  test_postgres_insert.sql  test_postgres_select.sql
lua/: sqlazo.lua
nvim/: README.md
nvim/lua/sqlazo/: commands.lua  config.lua  console.lua  init.lua  parser.lua  results.lua  runner.lua  schema.lua  ui.lua
nvim/plugin/: sqlazo.lua
src/: cli.rs  config.rs  db.rs  main.rs  output.rs  parser.rs  schema.rs
src/sqlazo/: __init__.py  __main__.py  cli.py  connection.py  executor.py  formatter.py  parser.py  schema.py
tests/: sqlazo_cli.rs  test_parser.py  test_schema.py
tests/nvim/: harness.lua  results_spec.lua  run.lua  schema_spec.lua
