[package]
name = "sqlazo"
version = "0.2.2"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "sqlite", "postgres", "mysql", "chrono"] }
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
url = "2.5"
urlencoding = "2.1"

[dev-dependencies]
tempfile = "3.10"
